--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "amp-smart-light",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "description": "Library to interact with an Amp smart lighting controller",
   "main": "src/index.js",
-  "scripts": {
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/intentfulmotion/amp.js.git"
@@ -23,6 +22,7 @@
   "homepage": "https://github.com/intentfulmotion/amp.js#readme",
   "dependencies": {
     "@msgpack/msgpack": "^2.3.0",
+    "lodash": "^4.17.20",
     "rxjs": "^6.6.3"
   }
 }
